Coms are improving, but still no text showing. Backlight is working though!

--- a/libMPSSEWrapper/Test/Test.csproj
+++ b/libMPSSEWrapper/Test/Test.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LCD\I2CIO.cs" />
     <Compile Include="LCD\I2CLCD.cs" />
     <Compile Include="LCD\LCD.cs" />
     <Compile Include="LCD\LCDEnum.cs" />
